@@ -11,7 +11,7 @@ use threads::shared;
 use Padre::Wx     ();
 use Padre::Task   ();
 use Thread::Queue ();
-use Padre::Debug;
+use Padre::Logger;
 
 our $VERSION = '0.52';
 our @ISA     = 'Padre::Task';
