@@ -6,7 +6,7 @@ use warnings;
 use Params::Util   ();
 use Padre::Wx      ();
 use Padre::Current ();
-use Padre::Debug;
+use Padre::Logger;
 
 our $VERSION = '0.52';
 our @ISA     = 'Wx::TreeCtrl';
